--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "its a practice project of flexbox",
   "main": "index.js",
   "scripts": {
-    "compile_sass": "node-sass ./sass/main.scss ./css/style.css -w"
+    "compile_sass": "node-sass ./sass/main.scss ./css/style.css -w",
+    "devserver" : "live-server",
+    "start" : "npm-run-all --parallel devserver compile_sass"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,9 @@
   },
   "homepage": "https://github.com/99Aditya99/Trello#readme",
   "devDependencies": {
-    "node-sass": "^4.13.0"
-  }
+    "live-server": "^1.2.1",
+    "node-sass": "^4.13.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {}
 }
